--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,14 @@ body {
     padding-left: 1.1em;
 }
 
+.list-name {
+    cursor: pointer;
+}
+
+.list-name:hover {
+    opacity: .7;
+}
+
 form {
     display: flex;
 }
@@ -61,11 +69,21 @@ form {
     font-size: 1.5rem;
     font-weight: 900;
     margin-right: .25rem;
+    transition: opacity 150ms ease-in;  
 }
 
 .btn.create:hover {
     opacity: .7;
-    transition: opacity 150ms ease-in;
+}
+
+.btn.delete {
+    opacity: .7;
+    font-size: 1rem;
+    transition: color 200ms;
+}
+
+.btn.delete:hover {
+    color: var(--color-warning);
 }
 
 .new {
@@ -75,12 +93,21 @@ form {
     border-bottom: 1px solid currentColor;
     font-size: inherit;
     outline: none;
+    padding: .25em;
     transition: border-bottom 150ms ease-in;
     order: 2;
 }
 
+.new::placeholder {
+    opacity: .4;
+}
+
 .new.list {
     font-size: 1.2rem;
+}
+
+.new.task {
+    margin-bottom: 0;
 }
 
 .new:focus {
@@ -88,7 +115,7 @@ form {
 }
 
 .new:focus::placeholder {
-    opacity: .2;
+    opacity: .15;
 }
 
 .active-list {
@@ -96,5 +123,119 @@ form {
 }
 
 .todo-list {
+    --spacer: 2rem;
     grid-area: active;
+    background: var(--color-light);
+    color: var(--color-dark);
+}
+
+.todo-header {
+    padding: var(--spacer);
+    background: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.list-title {
+    margin: 0 1em 0 0;
+}
+
+.task-count {
+    margin: 0;
+    font-size: 1rem;
+}
+
+.todo-body {
+    padding: var(--spacer);
+    position: relative;
+}
+
+.new-task-creator .create {
+    color: var(--color-primary);
+}
+
+[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+}
+
+.task label {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+}
+
+.task {
+    position: relative;
+    margin-bottom: 1.25em;
+}
+
+.task::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: -0.5em;
+    height: 1px;
+    background: currentColor;
+    opacity: .1;
+}
+
+.custom-checkbox {
+    --size: .75em;
+    display: inline-block;
+    margin-right: var(--size);
+    width: var(--size);
+    height: var(--size);
+    cursor: pointer;
+    border: 2px solid currentColor;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: transform 200ms ease-in-out;
+}
+
+.task:hover .custom-checkbox,
+[type="checkbox"]:focus + label .custom-checkbox {
+    transform: scale(1.1);
+    color: var(--color-primary);
+}
+
+[type="checkbox"]:checked + label .custom-checkbox {
+    background: var(--color-primary);
+    border-color: var(--color-primary);
+    box-shadow: inset 0 0 0 2px white;
+}
+
+[type="checkbox"]:checked + label {
+    opacity: .5;
+}
+
+.task label::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    left: 1.4em;
+    top: 50%;
+    height: 3px;
+    background: currentColor;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 150ms ease-in-out;
+}
+
+[type="checkbox"]:checked + label::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.delete-stuff {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -35px;
+    color: var(--color-light);
 }
